force-app/main/default/objects/Unit__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c +&apos; &apos;+ City__c  +&apos; &apos;+ State__c +&apos; &apos;+ Country__c +&apos; &apos;+ Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>