force-app/main/default/objects/Unit__c/fields/Advance_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Advance_Security_Deposit__c</fullName>
    <label>Advance Security Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>