force-app/main/default/objects/Unit__c/fields/Allow_this_unit__c.field-meta.xml
<CustomField>
    <fullName>Allow_this_unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow this unit</label>
    <type>Checkbox</type>
</CustomField>