force-app/main/default/objects/Unit__c/fields/Approval_Available__c.field-meta.xml
<CustomField>
    <fullName>Approval_Available__c</fullName>
    <label>Approval Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>