force-app/main/default/objects/Unit__c/fields/AW_BTS_Approval_through__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Approval_through__c</fullName>
    <label>Approval through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMDA</fullName>
            </value>
            <value>
                <fullName>DTCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>