force-app/main/default/objects/Unit__c/fields/AW_BTS_Base_Rental_Expected__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Base_Rental_Expected__c</fullName>
    <label>Base Rental Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>