force-app/main/default/objects/Unit__c/fields/AW_BTS_Built_up_Area__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Built_up_Area__c</fullName>
    <label>Built up  Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>