force-app/main/default/objects/Unit__c/fields/AW_BTS_Contact_details__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Contact_details__c</fullName>
    <label>Contact details</label>
    <type>Phone</type>
</CustomField>