force-app/main/default/objects/Unit__c/fields/AW_BTS_Distance_from_highway__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Distance_from_highway__c</fullName>
    <label>Distance from highway</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>