force-app/main/default/objects/Unit__c/fields/AW_BTS_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Email_Id__c</fullName>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>