force-app/main/default/objects/Unit__c/fields/AW_BTS_Frontage__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Frontage__c</fullName>
    <label>Frontage</label>
    <type>TextArea</type>
</CustomField>