force-app/main/default/objects/Unit__c/fields/AW_BTS_Google_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Google_Coordinates__c</fullName>
    <label>Google Coordinates</label>
    <type>Url</type>
</CustomField>