force-app/main/default/objects/Unit__c/fields/AW_BTS_Land_Zone__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Land_Zone__c</fullName>
    <label>Land Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Warehouse &amp; Factory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>