force-app/main/default/objects/Unit__c/fields/AW_BTS_Location__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Location__c</fullName>
    <label>Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>