force-app/main/default/objects/Unit__c/fields/AW_BTS_Lock_in_Terms__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Lock_in_Terms__c</fullName>
    <label>Lock-in Terms</label>
    <type>TextArea</type>
</CustomField>