force-app/main/default/objects/Unit__c/fields/AW_BTS_Sketch__c.field-meta.xml
<CustomField>
    <fullName>AW_BTS_Sketch__c</fullName>
    <label>Sketch</label>
    <type>TextArea</type>
</CustomField>