force-app/main/default/objects/Unit__c/fields/AW_Land_360_video__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_360_video__c</fullName>
    <label>360% video</label>
    <type>Url</type>
</CustomField>