force-app/main/default/objects/Unit__c/fields/AW_Land_Extent__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Extent__c</fullName>
    <label>Extent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>