force-app/main/default/objects/Unit__c/fields/AW_Land_FMB_Sketch__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_FMB_Sketch__c</fullName>
    <label>FMB Sketch</label>
    <type>Url</type>
</CustomField>