force-app/main/default/objects/Unit__c/fields/AW_Land_Frontage_of_the_land__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Frontage_of_the_land__c</fullName>
    <label>Frontage of the land</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>