force-app/main/default/objects/Unit__c/fields/AW_Land_Neighbour_Companies__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Neighbour_Companies__c</fullName>
    <label>Neighbour Companies</label>
    <type>TextArea</type>
</CustomField>