force-app/main/default/objects/Unit__c/fields/AW_Land_No_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_No_of_Owners__c</fullName>
    <label>No. of Owners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>