force-app/main/default/objects/Unit__c/fields/AW_Land_Reference_by__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Reference_by__c</fullName>
    <label>Reference by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Land owner</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>