force-app/main/default/objects/Unit__c/fields/AW_Land_Road_width__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Road_width__c</fullName>
    <label>Road width</label>
    <type>TextArea</type>
</CustomField>