force-app/main/default/objects/Unit__c/fields/AW_Land_Type_of_Land__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Type_of_Land__c</fullName>
    <label>Type of Land</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Wet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>