force-app/main/default/objects/Unit__c/fields/AW_Land_Village_Name__c.field-meta.xml
<CustomField>
    <fullName>AW_Land_Village_Name__c</fullName>
    <label>Village Name</label>
    <type>TextArea</type>
</CustomField>