force-app/main/default/objects/Unit__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <formula>IF(
  Total_Rent_Total_Price__c = 0,
  NULL,
   IF(
    Total_Rent_Total_Price__c &lt;= 100000,
    &quot;0 to 1 lakh&quot;,
IF(
  Total_Rent_Total_Price__c &lt;= 250000,
  &quot;1 lakh to 2.5 lakh&quot;,
  IF(
    Total_Rent_Total_Price__c &lt;= 500000,
    &quot;2.5 lakh to 5 lakh&quot;,
    IF(
      Total_Rent_Total_Price__c &lt;= 1000000,
      &quot;5 lakh to 10 lakh&quot;,
      IF(
        Total_Rent_Total_Price__c &lt;= 2500000,
        &quot;10 lakh to 25 lakh&quot;,
        IF(
          Total_Rent_Total_Price__c &lt;= 5000000,
          &quot;25 lakh to 50 lakh&quot;,
          &quot;Above 50 lakh&quot;
        )
      )
    )
  )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Range</label>
    <type>Text</type>
</CustomField>