force-app/main/default/objects/Unit__c/fields/Building_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Building_Type_Text__c</fullName>
    <label>Building Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>