force-app/main/default/objects/Unit__c/fields/Built_Up_Area_UOM__c.field-meta.xml
<CustomField>
    <fullName>Built_Up_Area_UOM__c</fullName>
    <label>Built-Up Area UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Square</valueSetName>
    </valueSet>
</CustomField>