force-app/main/default/objects/Unit__c/fields/Carpet_Area_in_acres__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_acres__c</fullName>
    <formula>Carpet_Area_in_sq_ft__c / 43560</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area (in acres.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>