force-app/main/default/objects/Unit__c/fields/Carpet_Area_in_bigha__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_bigha__c</fullName>
    <formula>Carpet_Area_in_sq_ft__c/ 17452.0069808</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area (in bigha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>