force-app/main/default/objects/Unit__c/fields/Carpet_Area_in_guntha__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_guntha__c</fullName>
    <formula>Carpet_Area_in_sq_ft__c  / 1088.9848169</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area (in guntha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>