force-app/main/default/objects/Unit__c/fields/Carpet_area_in_sft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_area_in_sft__c</fullName>
    <label>Carpet area in sft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>