force-app/main/default/objects/Unit__c/fields/Carpet_Area_in_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_sq_ft__c</fullName>
    <formula>if( TEXT(Unit_UOM__c) == &apos;Sq.Ft.&apos;,  Carpet_Area__c ,
        if( TEXT(Unit_UOM__c) == &apos;Sq.Meter&apos;,  Carpet_Area__c * 10.7639 ,
        if( TEXT(Unit_UOM__c) == &apos;Acres&apos;,  Carpet_Area__c * 43560 ,
        if( TEXT(Unit_UOM__c) == &apos;Guntha&apos;,  Carpet_Area__c * 1089 ,
        if( TEXT(Unit_UOM__c) == &apos;Bigha&apos;,  Carpet_Area__c * 17452.0069808 ,
        if( TEXT(Unit_UOM__c) == &apos;Sq. Yards&apos;,  Carpet_Area__c * 8.999991288 ,
        if( TEXT(Unit_UOM__c) == &apos;Hectares&apos;,  Carpet_Area__c * 107639 ,
        0
        )
        )
        )
        )
        )
        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area (in sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>