force-app/main/default/objects/Unit__c/fields/Carpet_area_percentage__c.field-meta.xml
<CustomField>
    <fullName>Carpet_area_percentage__c</fullName>
    <label>Carpet area percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>