force-app/main/default/objects/Unit__c/fields/Ceiling_Center_Height_UOM__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Center_Height_UOM__c</fullName>
    <label>Ceiling Center Height UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_UOM</valueSetName>
    </valueSet>
</CustomField>