force-app/main/default/objects/Unit__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>