force-app/main/default/objects/Unit__c/fields/Commission_service_charges__c.field-meta.xml
<CustomField>
    <fullName>Commission_service_charges__c</fullName>
    <label>Commission service charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>0-7</fullName>
                <isActive>false</isActive>
                <label>0-7</label>
            </value>
            <value>
                <fullName>16-30</fullName>
                <isActive>false</isActive>
                <label>16-30</label>
            </value>
            <value>
                <fullName>8-15</fullName>
                <isActive>false</isActive>
                <label>8-15</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>