force-app/main/default/objects/Unit__c/fields/Date_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_Available__c</fullName>
    <label>Date Available</label>
    <type>Date</type>
</CustomField>