force-app/main/default/objects/Unit__c/fields/Date_of_Posting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Posting__c</fullName>
    <label>Date of Posting</label>
    <type>Date</type>
</CustomField>