force-app/main/default/objects/Unit__c/fields/Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units (Decision Maker Name)</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>