force-app/main/default/objects/Unit__c/fields/Dock_Leveller__c.field-meta.xml
<CustomField>
    <fullName>Dock_Leveller__c</fullName>
    <label>Dock Leveller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>