force-app/main/default/objects/Unit__c/fields/Dock_Leveller_Text__c.field-meta.xml
<CustomField>
    <fullName>Dock_Leveller_Text__c</fullName>
    <label>Dock Leveller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>