force-app/main/default/objects/Unit__c/fields/DuplicateUnitName__c.field-meta.xml
<CustomField>
    <fullName>DuplicateUnitName__c</fullName>
    <label>DuplicateUnitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>