force-app/main/default/objects/Unit__c/fields/EoT_Crane_Provision_Text__c.field-meta.xml
<CustomField>
    <fullName>EoT_Crane_Provision_Text__c</fullName>
    <label>EoT Crane Provision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>