force-app/main/default/objects/Unit__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>