force-app/main/default/objects/Unit__c/fields/Fire_Safety__c.field-meta.xml
<CustomField>
    <fullName>Fire_Safety__c</fullName>
    <label>Fire Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extinguishers</fullName>
            </value>
            <value>
                <fullName>Hydrants</fullName>
            </value>
            <value>
                <fullName>Sprinklers</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>