force-app/main/default/objects/Unit__c/fields/Floor_ht_from_ground_level__c.field-meta.xml
<CustomField>
    <fullName>Floor_ht_from_ground_level__c</fullName>
    <label>Floor ht from ground level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>