force-app/main/default/objects/Unit__c/fields/Floor_ht_from_ground_level_UOM__c.field-meta.xml
<CustomField>
    <fullName>Floor_ht_from_ground_level_UOM__c</fullName>
    <label>Floor ht from ground level UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_UOM</valueSetName>
    </valueSet>
</CustomField>