force-app/main/default/objects/Unit__c/fields/Floor_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Floor_Insulation__c</fullName>
    <label>Roof Insulation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>