force-app/main/default/objects/Unit__c/fields/Floor_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Type__c</fullName>
    <label>Floor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>VDF</fullName>
            </value>
            <value>
                <fullName>FM-2</fullName>
            </value>
            <value>
                <fullName>Epoxy</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Trimax</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>