force-app/main/default/objects/Unit__c/fields/Flooring_Strength_per_MT__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Strength_per_MT__c</fullName>
    <label>Flooring Strength (per MT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>