force-app/main/default/objects/Unit__c/fields/Frontage_UOM__c.field-meta.xml
<CustomField>
    <fullName>Frontage_UOM__c</fullName>
    <label>Frontage (UOM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>