force-app/main/default/objects/Unit__c/fields/Google_Coordinates_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Coordinates_Link__c</fullName>
    <label>Google Coordinates Link</label>
    <type>Url</type>
</CustomField>