force-app/main/default/objects/Unit__c/fields/Hold_Started__c.field-meta.xml
<CustomField>
    <fullName>Hold_Started__c</fullName>
    <label>Hold Started</label>
    <type>DateTime</type>
</CustomField>