force-app/main/default/objects/Unit__c/fields/Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_Until__c</fullName>
    <label>Hold Until</label>
    <type>DateTime</type>
</CustomField>