force-app/main/default/objects/Unit__c/fields/Land_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Land_Ownership__c</fullName>
    <label>Land Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
            <value>
                <fullName>Sublease</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>