force-app/main/default/objects/Unit__c/fields/Lighting__c.field-meta.xml
<CustomField>
    <fullName>Lighting__c</fullName>
    <label>Lighting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial</fullName>
            </value>
            <value>
                <fullName>Skylight</fullName>
            </value>
            <value>
                <fullName>Natural &amp; Artificial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>