force-app/main/default/objects/Unit__c/fields/Main_door_facing__c.field-meta.xml
<CustomField>
    <fullName>Main_door_facing__c</fullName>
    <label>Main door facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>