force-app/main/default/objects/Unit__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>