force-app/main/default/objects/Unit__c/fields/Maintenance_by__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_by__c</fullName>
    <label>Maintenance by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>