force-app/main/default/objects/Unit__c/fields/No_of_floor__c.field-meta.xml
<CustomField>
    <fullName>No_of_floor__c</fullName>
    <label>No. of floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>