force-app/main/default/objects/Unit__c/fields/No_of_shutters__c.field-meta.xml
<CustomField>
    <fullName>No_of_shutters__c</fullName>
    <label>No of shutters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>