force-app/main/default/objects/Unit__c/fields/No_of_toilets__c.field-meta.xml
<CustomField>
    <fullName>No_of_toilets__c</fullName>
    <label>No of toilets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>