force-app/main/default/objects/Unit__c/fields/OC_CC_Received__c.field-meta.xml
<CustomField>
    <fullName>OC_CC_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OC/CC Received</label>
    <type>Checkbox</type>
</CustomField>