force-app/main/default/objects/Unit__c/fields/Office_Space_Size__c.field-meta.xml
<CustomField>
    <fullName>Office_Space_Size__c</fullName>
    <label>Office Space Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>