force-app/main/default/objects/Unit__c/fields/Parking_space__c.field-meta.xml
<CustomField>
    <fullName>Parking_space__c</fullName>
    <label>Parking space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>