force-app/main/default/objects/Unit__c/fields/Plot_Area__c.field-meta.xml
<CustomField>
    <fullName>Plot_Area__c</fullName>
    <label>Plot Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>