force-app/main/default/objects/Unit__c/fields/Plot_street_address__c.field-meta.xml
<CustomField>
    <fullName>Plot_street_address__c</fullName>
    <label>Plot street address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>